[package]
name = "crafting-interpreters-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
hash-chain = "0.3.2"
itertools = "0.10.5"
once_cell = "1.17.1"
