[package]
name = "crafting-interpreters-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
hash-chain = "0.3.2"
itertools = "0.10.5"
by_address = "1.1.0"
num_enum = "0.6.1"
enum-map = "2.6.0"
thin_str = "0.1.0"
datasize = "0.2.14"
