[package]
name = "crafting-interpreters-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[features]
default = ["nan-boxing"]
nan-boxing = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
hash-chain = "0.3.2"
itertools = "0.11.0"
num_enum = "0.7.0"
enum-map = "2.6.0"
fnv = "1.0.7"
stats_alloc = "0.1.10"
prehash = "1.0.0"
